future release
	* build based on CMake
	* ElegentTest renamed to ElegentGeneratorTest
	* traceable Elegent version (and SVN revision) in ROOT files and plots
	* middle range t-plots: linear, up to 1.5 GeV^2
	* added Godizov model
	* numerical integration exploiting GSL library
	* added model of Ferreira et al.

release 1.2.1
	* fixed build problem: correct order of libraries
	* improved test suite

release 1.2
	* fixed make_release script
	* explict unit specification (GeV, mm) in HepMC event description

release 1.1
	* naming scheme for distributions and plots
		...<mode>,<sqrt(s)>GeV...
	* minor modification: JenkovszkyModel updated to match with Int. J. Mod. Phys. A26 (2011)
	* BHModel: updated to match with BLOCK, M. M., Phys. Rept. 436 (2006) 71-215
	* new model labeling scheme: name:mode (variant) [version]
	* added s-distribution sampler
	* BHModel: inconsistencies checked with the authors
	* BSWModel: reggeon contribution fully functional, correct difference between pp and app reactions

release 1.0
	* first fully operational version