@@ -11,11 +11,12 @@ find_package(HepMC REQUIRED)
 find_package(GSL REQUIRED)
 
 # include SVN revision in project version, if available
-include(FindSubversion)
-if (SUBVERSION_FOUND)
-	Subversion_WC_INFO(${Elegent_SOURCE_DIR} SVN)
-	set(Elegent_VERSION "${Elegent_VERSION} (revision ${SVN_WC_REVISION})")
-endif()
+# TODO: uncomment
+#include(FindSubversion)
+#if (SUBVERSION_FOUND)
+#	Subversion_WC_INFO(${Elegent_SOURCE_DIR} SVN)
+#	set(Elegent_VERSION "${Elegent_VERSION} (revision ${SVN_WC_REVISION})")
+#endif()
 
 message(STATUS "Elegent version: " ${Elegent_VERSION})
 
