@@ -6,7 +6,7 @@ include_directories(${HEPMC_INCLUDE})
 include_directories(${GSL_INCLUDE_DIR})
 
 add_library(Elegent SHARED Constants.cc Math.cc
-	Model.cc BHModel.cc BSWModel.cc ExpModel.cc FerreiraModel.cc GodizovModel.cc InterpolationModel.cc IslamModel.cc JenkovszkyModel.cc PPPModel.cc
+	Model.cc BHModel.cc BSWModel.cc DLModel.cc ExpModel.cc FerreiraModel.cc GodizovModel.cc InterpolationModel.cc IslamModel.cc JenkovszkyModel.cc PPPModel.cc
 	CoulombInterference.cc ModelFactory.cc Generator.cc)
 
 install(TARGETS Elegent DESTINATION lib)
